--- a/docs/_posts/2024-11-21-uklatn-go.md
+++ b/docs/_posts/2024-11-21-uklatn-go.md
@@ -5,6 +5,7 @@ author: paiv
 ---
 
 - [https://pkg.go.dev/github.com/paiv/uklatn/go/uklatn](https://pkg.go.dev/github.com/paiv/uklatn/go/uklatn)
+- try in [Go Playground](https://go.dev/play/p/G1ZfqpdPJsk)
 
 
 Install
