--- a/docs/_posts/2024-10-29-uklatn-c.md
+++ b/docs/_posts/2024-10-29-uklatn-c.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "C library Ukrainian Cyrillic to Latin script transliteration"
+title:  "C library for Ukrainian Cyrillic to Latin script transliteration"
 author: paiv
 ---
 
