--- a/docs/_posts/2024-11-21-uklatn-go.md
+++ b/docs/_posts/2024-11-21-uklatn-go.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Go package Ukrainian Cyrillic to Latin script transliteration"
+title:  "Go package for Ukrainian Cyrillic to Latin script transliteration"
 author: paiv
 ---
 
