--- a/docs/_posts/2024-10-29-uklatn-c.md
+++ b/docs/_posts/2024-10-29-uklatn-c.md
@@ -26,6 +26,8 @@ Usage
 The library provides UTF-8 and UTF-16 API. The underlying ICU operates on UTF-16 strings.
 
 ```c
+#include <uklatn.h>
+
 /* UTF-8 */
 uklatn_encode("Доброго вечора!", UklaltnTable_default, dest, destsize);
 uklatn_decode("Paljanycja", UklaltnTable_default, dest, destsize);
@@ -33,6 +35,12 @@ uklatn_decode("Paljanycja", UklaltnTable_default, dest, destsize);
 /* UTF-16 */
 uklatn_encodeu(u"Доброго вечора!", UklaltnTable_default, dest, destsize);
 uklatn_decodeu(u"Paljanycja", UklaltnTable_default, dest, destsize);
+```
+
+Set the transliteration scheme:
+```c
+uklatn_encode("Борщ", UklaltnTable_DSTU_9112_B, dest, destsize);
+uklatn_encode("Шевченко", UklaltnTable_KMU_55, dest, destsize);
 ```
 
 
