--- a/docs/_posts/2024-11-21-uklatn-go.md
+++ b/docs/_posts/2024-11-21-uklatn-go.md
@@ -27,9 +27,10 @@ uklatn.EncodeString("Доброго вечора!", uklatn.DefaultTable)
 uklatn.DecodeString("Paljanycja", uklatn.DefaultTable)
 ```
 
-Select a transliteration scheme:
+Set the transliteration scheme:
 ```go
-uklatn.EncodeString("Борщ", uklatn.DSTU_9112_A)
+uklatn.EncodeString("Борщ", uklatn.DSTU_9112_B)
+uklatn.EncodeString("Шевченко", uklatn.KMU_55)
 ```
 
 
@@ -37,4 +38,3 @@ Notes
 --
 Input is assumed to be in Ukrainian (Cyrillic or Latin script), and will be processed in full.
 If your data has mixed languages, do preprocessing to extract Ukrainian chunks.
-
